--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,4 @@ poetry.toml
 
 # End of https://www.toptal.com/developers/gitignore/api/django,python,pycharm
 /populate_script.py
+/populate_vehicle_script.py
